WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
46078
[Qt] PluginStrategy implementation is broken
https://bugs.webkit.org/show_bug.cgi?id=46078
Summary
[Qt] PluginStrategy implementation is broken
Balazs Kelemen
Reported
2010-09-20 02:35:51 PDT
As Kling pointed out on
webkit-qt@lists.webkit.org
the PluginStrategy implementation is wrong. It causes API regression and crashiness.
Attachments
proposed patch
(6.18 KB, patch)
2010-09-20 08:50 PDT
,
Balazs Kelemen
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Balazs Kelemen
Comment 1
2010-09-20 08:50:12 PDT
Created
attachment 68089
[details]
proposed patch
WebKit Review Bot
Comment 2
2010-09-20 08:52:33 PDT
Attachment 68089
[details]
did not pass style-queue: Failed to run "['WebKitTools/Scripts/check-webkit-style']" exit_code: 1 WebKit/qt/WebCoreSupport/WebPlatformStrategies.cpp:36: Alphabetical sorting problem. [build/include_order] [4] WARNING: File exempt from style guide. Skipping: "WebKit/qt/Api/qwebpage.cpp" Total errors found: 1 in 6 files If any of these errors are false positives, please file a bug against check-webkit-style.
Balazs Kelemen
Comment 3
2010-09-20 08:57:51 PDT
> If any of these errors are false positives, please file a bug against check-webkit-style.
Sort orders these in the same order so maybe it is a check-webkit-syle bug.
Early Warning System Bot
Comment 4
2010-09-20 08:58:02 PDT
Attachment 68089
[details]
did not build on qt: Build output:
http://queues.webkit.org/results/4030081
Balazs Kelemen
Comment 5
2010-09-20 10:19:35 PDT
Finally I have realized that check-webkit-style expects system style includes after normal ones. (I have created a bug for the style guideline page that is ambigous:
https://bugs.webkit.org/show_bug.cgi?id=46099
). I could fix the include order before commit.
Andreas Kling
Comment 6
2010-09-22 07:25:58 PDT
Comment on
attachment 68089
[details]
proposed patch Clearing flags on attachment: 68089 Committed
r68039
: <
http://trac.webkit.org/changeset/68039
>
Andreas Kling
Comment 7
2010-09-22 07:26:09 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug