2010-09-22  Balazs Kelemen  <kb@inf.u-szeged.hu>

Reviewed by Kenneth Rohde Christiansen.

        [Qt] PluginStrategy implementation is broken
        https://bugs.webkit.org/show_bug.cgi?id=46078

        Remove the QWebPage* member from WebPlatformStrategies.
        Get the originator QWebPage of the getPluginInfo call via
        the Page* argument.
        * Api/qwebpage.cpp:
        (QWebPagePrivate::QWebPagePrivate):
        * WebCoreSupport/WebPlatformStrategies.cpp:
        (WebPlatformStrategies::initialize):
        (WebPlatformStrategies::WebPlatformStrategies):
        (WebPlatformStrategies::getPluginInfo):
        Use the ChromeClient for accessing the originator QWebPage.
        * WebCoreSupport/WebPlatformStrategies.h:
2010-09-22  Balazs Kelemen  <kb@inf.u-szeged.hu>

        Reviewed by Kenneth Rohde Christiansen.

        [Qt] PluginStrategy implementation is broken
        https://bugs.webkit.org/show_bug.cgi?id=46078

        * UIProcess/API/qt/qwkpage.cpp:
        (QWKPagePrivate::QWKPagePrivate):
        Initialize the WebPlatformStrategies at the UI side as well because
        we are using the LocalizationStrategy in the UI process.
        Added a FIXME since this should be fixed in the future.


Canonical link: https://commits.webkit.org/58741@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@68039 268f45cc-cd09-0410-ab3c-d52691b4dbfc