WebKit/qt/WebCoreSupport/WebPlatformStrategies.cpp
@@ -30,8 +30,10 @@
 #include "config.h"
 #include "WebPlatformStrategies.h"
 
-#include "NotImplemented.h"
+#include "Chrome.h"
+#include "ChromeClientQt.h"
 #include <IntSize.h>
+#include "NotImplemented.h"
 #include <Page.h>
 #include <PageGroup.h>
 #include <PluginDatabase.h>
@@ -43,14 +45,13 @@
 
 using namespace WebCore;
 
-void WebPlatformStrategies::initialize(QWebPage* webPage)
+void WebPlatformStrategies::initialize()
 {
-    DEFINE_STATIC_LOCAL(WebPlatformStrategies, platformStrategies, (webPage));
+    DEFINE_STATIC_LOCAL(WebPlatformStrategies, platformStrategies, ());
     Q_UNUSED(platformStrategies);
 }
 
-WebPlatformStrategies::WebPlatformStrategies(QWebPage* webPage)
-    : m_page(webPage)
+WebPlatformStrategies::WebPlatformStrategies()
 {
     setPlatformStrategies(this);
 }
@@ -78,10 +79,11 @@ void WebPlatformStrategies::refreshPlugins()
     PluginDatabase::installedPlugins()->refresh();
 }
 
-void WebPlatformStrategies::getPluginInfo(Vector<WebCore::PluginInfo>& outPlugins)
+void WebPlatformStrategies::getPluginInfo(const WebCore::Page* page, Vector<WebCore::PluginInfo>& outPlugins)
 {
-    QWebPluginFactory* factory = m_page->pluginFactory();
-    if (factory) {
+    QWebPage* qPage = static_cast<ChromeClientQt*>(page->chrome()->client())->m_webPage;
+    QWebPluginFactory* factory;
+    if (qPage && (factory = qPage->pluginFactory())) {
 
         QList<QWebPluginFactory::Plugin> qplugins = factory->plugins();
         for (int i = 0; i < qplugins.count(); ++i) {
