WebKit/qt/WebCoreSupport/WebPlatformStrategies.h
@@ -33,14 +33,16 @@
 #include <PluginStrategy.h>
 #include <VisitedLinkStrategy.h>
 
-class QWebPage;
+namespace WebCore {
+class Page;
+}
 
 class WebPlatformStrategies : public WebCore::PlatformStrategies, private WebCore::PluginStrategy, private WebCore::LocalizationStrategy, private WebCore::VisitedLinkStrategy {
 public:
-    static void initialize(QWebPage* webPage);
+    static void initialize();
 
 private:
-    WebPlatformStrategies(QWebPage* webPage);
+    WebPlatformStrategies();
 
     // WebCore::PlatformStrategies
     virtual WebCore::PluginStrategy* createPluginStrategy();
@@ -49,7 +51,7 @@ private:
 
     // WebCore::PluginStrategy
     virtual void refreshPlugins();
-    virtual void getPluginInfo(Vector<WebCore::PluginInfo>&);
+    virtual void getPluginInfo(const WebCore::Page*, Vector<WebCore::PluginInfo>&);
 
     // WebCore::LocalizationStrategy
     virtual WTF::String inputElementAltText();
@@ -144,8 +146,6 @@ private:
     // WebCore::VisitedLinkStrategy
     virtual bool isLinkVisited(WebCore::Page*, WebCore::LinkHash);
     virtual void addVisitedLink(WebCore::Page*, WebCore::LinkHash);
-
-    QWebPage* m_page;
 };
 
 #endif // WebPlatformStrategies_h
